reuse-cloud-salesforce/force-app/main/default/objects/Recovery_Asset__c/Recovery_Asset__c.object-meta.xml
<CustomObject>
<description>Synthetic circular-economy equipment recovery workflow.</description>
  <label>Recovery Asset</label><nameField><displayFormat>RA-{00000}</displayFormat><label>Recovery Asset Number</label><type>AutoNumber</type></nameField>
  <pluralLabel>Recovery Assets</pluralLabel><sharingModel>Private</sharingModel>
</CustomObject>