reuse-cloud-salesforce/force-app/main/default/objects/Recovery_Asset__c/fields/Acquisition_Credit__c.field-meta.xml
<CustomField><fullName>Acquisition_Credit__c</fullName><label>Acquisition Credit</label><precision>16</precision><scale>2</scale><required>false</required><type>Currency</type></CustomField>