reuse-cloud-salesforce/force-app/main/default/objects/Recovery_Asset__c/fields/Condition_Score__c.field-meta.xml
<CustomField><fullName>Condition_Score__c</fullName><label>Condition Score</label><precision>3</precision><scale>0</scale><required>false</required><type>Number</type></CustomField>