reuse-cloud-salesforce/force-app/main/default/objects/Recovery_Asset__c/fields/Expected_Net__c.field-meta.xml
<CustomField><fullName>Expected_Net__c</fullName><label>Expected Net</label><precision>16</precision><scale>2</scale><required>false</required><type>Currency</type></CustomField>