reuse-cloud-salesforce/force-app/main/default/objects/Recovery_Asset__c/fields/External_Id__c.field-meta.xml
<CustomField><fullName>External_Id__c</fullName><label>External ID</label><length>60</length><externalId>true</externalId><unique>true</unique><required>false</required><type>Text</type></CustomField>