reuse-cloud-salesforce/force-app/main/default/objects/Recovery_Asset__c/fields/Failure_Probability__c.field-meta.xml
<CustomField><fullName>Failure_Probability__c</fullName><label>Failure Probability</label><precision>5</precision><scale>4</scale><required>false</required><type>Number</type></CustomField>