reuse-cloud-salesforce/force-app/main/default/objects/Recovery_Asset__c/fields/Policy_Version__c.field-meta.xml
<CustomField><fullName>Policy_Version__c</fullName><label>Policy Version</label><length>40</length><required>false</required><type>Text</type></CustomField>