reuse-cloud-salesforce/force-app/main/default/objects/Recovery_Asset__c/fields/Recycle_Net__c.field-meta.xml
<CustomField><fullName>Recycle_Net__c</fullName><label>Recycle Net</label><precision>16</precision><scale>2</scale><required>false</required><type>Currency</type></CustomField>