reuse-cloud-salesforce/force-app/main/default/objects/Recovery_Asset__c/fields/Repair_Net__c.field-meta.xml
<CustomField><fullName>Repair_Net__c</fullName><label>Repair Net</label><precision>16</precision><scale>2</scale><required>false</required><type>Currency</type></CustomField>