reuse-cloud-salesforce/force-app/main/default/objects/Recovery_Asset__c/fields/Resale_Price__c.field-meta.xml
<CustomField><fullName>Resale_Price__c</fullName><label>Resale Price</label><precision>16</precision><scale>2</scale><required>false</required><type>Currency</type></CustomField>