reuse-cloud-salesforce/force-app/main/default/objects/Recovery_Asset__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Draft</fullName><default>true</default><label>Draft</label></value><value><fullName>Evaluated</fullName><default>false</default><label>Evaluated</label></value><value><fullName>Approved</fullName><default>false</default><label>Approved</label></value></valueSetDefinition></valueSet><required>false</required><type>Picklist</type></CustomField>